force-app/main/default/objects/clofor_com_cfs__KickbackBank__c/fields/clofor_com_cfs__BankTransactionID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BankTransactionID__c</fullName>
    <label>BANK TRANSACTION ID</label>
    <referenceTo>clofor_com_cfs__BankTransaction__c</referenceTo>
    <relationshipLabel>KICKBACK+BANK</relationshipLabel>
    <relationshipName>KickbankBank</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>