force-app/main/default/objects/clofor_com_cfs__KickbackBank__c/fields/clofor_com_cfs__UnpaidBalanceOfKickbackUSD__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnpaidBalanceOfKickbackUSD__c</fullName>
    <formula>clofor_com_cfs__KickbackID__r.clofor_com_cfs__UnpaidBalanceUSD__c</formula>
    <label>UNPAID BALANCE OF KICKBACK(USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>